# cure-freedom-bot

./: .gitignore  Chart.yaml  Containerfile  pyproject.toml  values.yaml
.github/workflows/: build_publish.yml  main.yml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yml  secret.yaml
src/cure-freedom-bot/: aldi.py  bot.py  constants.py  convutils.py  main.py  utils.py
src/cure_freedom_bot/: aldi.py  bot.py  constants.py  convutils.py  helper.py  logger.py  main.py  utils.py
templates/: configmap.yaml  deployment.yml  secret.yaml
