[tool.poetry]
name = "cure-freedom-bot"
version = "1.0.0"
description = ""
authors = ["Blindfolded Surgery <team@blindfolded.surgery>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.12"
httpx = "*"
python-telegram-bot = "21.1.1"
beautifulsoup4 = "^4.12.2"
currencyconverter = "^0.17.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
