[tool.poetry]
name = "cure-freedom-bot"
version = "1.0.0"
description = ""
authors = ["Blindfolded Surgery <team@blindfolded.surgery>"]
license = "MIT"
packages = [
    { include = "cure_freedom_bot", from = "src" }
]

[tool.poetry.dependencies]
python = "~3.12"
httpx = "*"
python-telegram-bot = "21.1.1"
beautifulsoup4 = "^4.12.2"
currencyconverter = "^0.17.12"

[tool.poetry.group.dev.dependencies]
mypy = "~1.11"
pytest = "^8.0.0"
ruff = "0.6.1"
types-beautifulsoup4 = "^4.12.0.20240511"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "currency_converter"
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = [
    "I001",
]

[tool.ruff.lint.per-file-ignores]
"bot.py" = ["F403", "F405"]

